--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div id="loader-wrapper" preloading-page>
+            <div id="loader"></div>
+        </div>
         <div ng-view></div>
     </body>
 </html>
