add loading line

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="loader-wrapper" preloading-page>
-            <div id="loader"></div>
+        <div class="loader-line" preloading-page></div>
+        <div ng-view>
+            <div id="loader-wrapper">
+                <div id="loader"></div>
+            </div>
         </div>
-        <div ng-view></div>
     </body>
 </html>
