completed searching 3 pages

--- a/directives/header.html
+++ b/directives/header.html
@@ -4,6 +4,9 @@
             placement: "bottom",
             container: "body"
         });
+        $('.dropdown-menu').click(function(event) {
+            event.stopPropagation();
+        });
     });
 </script>
 <div class="col-xs-12 restophead">
