fixed conntent to show new-line

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="js/angular.min.js"></script>
         <script type="text/javascript" src="js/angular-route.min.js"></script>
         <script type="text/javascript" src="js/angular-counter.min.js"></script>
+        <script type="text/javascript" src="js/angular-sanitize.js"></script>
         <script type="text/javascript" src="js/rzslider.min.js"></script>
         <script type="text/javascript" src="js/controllers.js"></script>
         <script type="text/javascript" src="js/directives.js"></script>
