--- a/directives/header.html
+++ b/directives/header.html
@@ -11,7 +11,22 @@
 </script>
 <div class="col-xs-12 restophead">
     <div class="container">
-        ss
+        <div class="row">
+            <div class="col-xs-2">
+                <a href="#/"><img class="logo" src="imgs/logo-sm.png"></a>
+            </div>
+            <div class="col-md-10 text-right buttongroup">
+                <a class="btn btn-sm btn-danger" role="button" ng-click="getCurrentLocation()">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; ร้านอาหารใกล้ตัว
+                </a>
+                <a href="#/coupons" class="btn btn-sm btn-warning" role="button">
+                    <i class="fa fa-gift" aria-hidden="true"></i>&nbsp; คูปอง
+                </a>
+                <a href="#/add-restaurant" class="btn btn-sm btn-success" role="button">
+                    <i class="glyphicon glyphicon-plus"></i> เพิ่มร้าน
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 <div ng-show="searchBar">
@@ -46,7 +61,7 @@
             <div class="col-md-2">
                 <div class="btn-group btn-group-justified">
                     <button type="button" class="btn btn-default" style="width: 65%;" data-toggle="modal" data-target="#searchAdvance" ng-click="setSlider()">ค้นละเอียด</button>
-                    <button type="button" class="btn btn-default" style="width: 35%;" data-toggle="tooltip" title="ค้นหาจากแผนที่"><i class="fa fa-map-o" aria-hidden="true"></i></button>
+                    <button type="button" class="btn btn-default" style="width: 35%;" title="ค้นหาจากแผนที่" ng-click="goToMaps()"><i class="fa fa-map-o" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div>
@@ -54,8 +69,8 @@
 
     <div class="col-xs-12 ressearchbar--scroll hidden-sm hidden-xs" ng-style="{ visibility: showSearchBar }" scroll-show-search>
         <div class="container">
-            <div class="col-md-2">
-                logo
+            <div class="col-md-2 text-center">
+                <a href="#/"><img class="logo" src="imgs/logo-sm.png"></a>
             </div>
             <div class="col-md-3">
                 <input type="text" class="form-control" ng-model="keyword" placeholder="ชื่อร้าน, ชื่ออาหาร">
@@ -64,15 +79,30 @@
                 <select class="form-control" ng-model="areaSelected" ng-options="item.name for item in area"></select>
             </div>
             <div class="col-md-2">
-                <select class="form-control" id="sel1">
-                    <option>ไม่จำกัดราคา</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                </select>
+                <div class="dropdown">
+                    <button class="btn btn-block btn-default dropdown-toggle" type="button" data-toggle="dropdown" ng-click="setSlider()">
+                        <span class="col-lg-9">
+                            {{ price.minValue }} - {{ price.maxValue }} บาท
+                        </span>
+                        <span class="col-lg-2">
+                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                        </span>
+                    </button>
+                    <div class="dropdown-menu" style="width: 200px;" ng-style="{ display: boxPrice }">
+                        <div class="col-xs-12">
+                            <rzslider rz-slider-model="price.minValue" rz-slider-high="price.maxValue" rz-slider-options="price.options"></rzslider>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-md-1">
                 <button type="button" class="btn btn-primary btn-block"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+            <div class="col-md-2">
+                <div class="btn-group btn-group-justified">
+                    <button type="button" class="btn btn-default" style="width: 65%;" data-toggle="modal" data-target="#searchAdvance" ng-click="setSlider()">ค้นละเอียด</button>
+                    <button type="button" class="btn btn-default" style="width: 35%;" title="ค้นหาจากแผนที่" ng-click="goToMaps()"><i class="fa fa-map-o" aria-hidden="true"></i></button>
+                </div>
             </div>
         </div>
     </div>
@@ -83,71 +113,10 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title"><i class="fa fa-search" aria-hidden="true"></i> ค้นหาแบบละเอียด</h4>
+                    <h4 class="modal-title"><i class="fa fa-search-plus" aria-hidden="true"></i> ค้นหาแบบละเอียด</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>คำค้นหา:</label>
-                                    <input type="text" class="form-control" ng-model="keyword" placeholder="ชื่อร้าน, ชื่ออาหาร">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>ประเภท:</label>
-                                    <select class="form-control" ng-model="typeSelected" ng-options="item.name for item in type"></select>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>เขต (ในกรุงเทพ):</label>
-                                    <select class="form-control" ng-model="areaSelected" ng-options="item.name for item in area"></select>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>ราคา (ต่อคน):</label>
-                                    <rzslider rz-slider-model="price.minValue" rz-slider-high="price.maxValue" rz-slider-options="price.options"></rzslider>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>คะแนนรวม:</label>
-                                    <rzslider rz-slider-model="score.value" rz-slider-options="score.options"></rzslider>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>บริการเสริม:</label>
-                                    <div class="row">
-                                        <div class="col-sm-4">
-                                            <div class="checkbox">
-                                                <label><input type="checkbox" ng-model="service.value1" ng-true-value="1" ng-false-value="">ที่จอดรถ</label>
-                                            </div>
-                                            <div class="checkbox">
-                                                <label><input type="checkbox" ng-model="service.value2" ng-true-value="1" ng-false-value="">Wi-fi</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="checkbox">
-                                                <label><input type="checkbox" ng-model="service.value3" ng-true-value="1" ng-false-value="">เครื่องปรับอาการ</label>
-                                            </div>
-                                            <div class="checkbox">
-                                                <label><input type="checkbox" ng-model="service.value4" ng-true-value="1" ng-false-value="">ทีวี</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="checkbox">
-                                                <label><input type="checkbox" ng-model="service.value5" ng-true-value="1" ng-false-value="">วงดนตรีสด</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <advance-search></advance-search>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="searchRestaurantAdvance()"><i class="fa fa-search" aria-hidden="true"></i> ค้นหา</button>
