fixed responsive menu

--- a/directives/header.html
+++ b/directives/header.html
@@ -1,4 +1,5 @@
-<div class="col-xs-12 restophead">
+<header-sm></header-sm>
+<div class="col-xs-12 restophead hidden-sm hidden-xs">
     <div class="container">
         <div class="row">
             <div class="col-xs-2">
