--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </head>
     <body>
         <div class="loader-line" preloading-page></div>
-        <div ng-view>
+        <div ng-view autoscroll>
             <div id="loader-wrapper">
                 <div id="loader"></div>
             </div>
