--- a/directives/navigator.html
+++ b/directives/navigator.html
@@ -1,6 +1,6 @@
 <div class="row navigator">
     <div class="col-xs-12">
-        <a href="#/">หน้าแรก</a>
+        <a href="#/" ng-click="__goToHompage()">หน้าแรก</a>
         <span class="active" ng-if="titleLevel1!=null && urlLevel1!=null">
             » <a ng-href="{{ urlLevel1 }}">{{ titleLevel1 }}</a>
         </span>
