--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title ng-bind="title +' - AroiDBkk'">ร้านอาหารในกรุงเทพ</title>
+        <script type="text/javascript" src="js/config.js"></script>
+        <script type="text/javascript" src="js/functions.js"></script>
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.easing.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -31,6 +33,13 @@
           js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8&appId=856311884463394";
           fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+          ga('create', configs.gaCode, {"cookieDomain":"none"});
+        </script>
     </head>
     <body>
         <div class="loader-line" preloading-page></div>
