fixed Json issue

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="css/rzslider.min.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.png" />
         <div id="fb-root"></div>
         <script>(function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
@@ -38,7 +39,7 @@
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-          ga('create', configs.gaCode, {"cookieDomain":"none"});
+          ga('create', configs.gaCode, 'auto');
         </script>
     </head>
     <body>
